--- a/index.html
+++ b/index.html
@@ -168,7 +168,25 @@
 
     <div id="leaderboard-container" style="display: none;">
         <div id="leaderboard-icon">🏆</div>
-        <div id="leaderboard-panel" class="module-container p-4 rounded-xl shadow-2xl"><h2 class="text-xl text-center font-bold text-transparent bg-clip-text bg-gradient-to-r from-amber-300 to-orange-400 mb-4">学分英雄榜</h2><div id="leaderboard-list" class="space-y-2"></div></div>
+        <div id="leaderboard-panel" class="module-container p-4 rounded-xl shadow-2xl w-[320px]">
+            <!-- Tab切换按钮 -->
+            <div class="flex justify-center mb-3 bg-slate-800/50 p-1 rounded-md">
+                <button id="leaderboard-personal-tab" class="leaderboard-tab active flex-1 py-1 px-4 text-sm font-semibold rounded transition-colors">个人榜</button>
+                <button id="leaderboard-faction-tab" class="leaderboard-tab flex-1 py-1 px-4 text-sm font-semibold rounded transition-colors">部门榜</button>
+            </div>
+        
+            <!-- 榜单容器 (BUG FIX: 使用 h-[400px] 替代 max-h-[400px] 来固定高度) -->
+            <div id="leaderboard-content-container" class="h-[400px] overflow-y-auto">
+                <div id="personal-board-content" class="leaderboard-content active">
+                    <h2 class="text-xl text-center font-bold text-transparent bg-clip-text bg-gradient-to-r from-amber-300 to-orange-400 mb-4">学分英雄榜</h2>
+                    <div id="leaderboard-list" class="space-y-2"></div>
+                </div>
+                <div id="faction-board-content" class="leaderboard-content hidden">
+                    <h2 class="text-xl text-center font-bold text-transparent bg-clip-text bg-gradient-to-r from-sky-300 to-cyan-400 mb-4">部门贡献榜</h2>
+                    <div id="leaderboard-faction-list" class="space-y-3"></div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div id="admin-modal-backdrop">
