--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                     <h2 id="form-title" class="text-3xl font-bold text-center text-white mb-8">用户登录</h2>
                     <form id="auth-form">
                         <div class="space-y-6">
+                            <!-- **THIS IS THE NEW/UPDATED PART** -->
                             <div id="full-name-input-container" class="hidden">
                                 <input type="text" id="full-name-input" placeholder="您的姓名" class="input-field w-full p-3 rounded-lg">
                             </div>
@@ -181,7 +182,7 @@
                 <div id="chapter-selection-view" class="view"><header class="text-center mb-16 relative"><button id="back-to-categories-btn" class="absolute top-1/2 -translate-y-1/2 left-0 p-2 rounded-full hover:bg-gray-700/50 transition-colors" title="返回学习地图"><svg class="w-8 h-8 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg></button><h1 id="chapter-view-title" class="text-4xl md:text-5xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-sky-400 to-violet-500"></h1><p id="chapter-view-desc" class="text-gray-400 mt-4 text-lg"></p></header><div id="chapters-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8"></div></div>
                 <div id="chapter-detail-view" class="view"><div class="module-container rounded-xl overflow-hidden flex flex-col md:flex-row" style="height: 75vh;"><aside id="sidebar" class="w-full md:w-80 bg-slate-900/80 text-gray-300 flex flex-col flex-shrink-0 border-r border-slate-700/50"><div id="sidebar-header" class="p-6 border-b border-slate-700/50"></div><nav class="flex-1 overflow-y-auto p-2"><ul id="sidebar-nav-list" class="space-y-1"></ul></nav><div class="p-4 mt-auto"><button id="back-to-chapters-btn" class="w-full bg-slate-700 hover:bg-slate-600 text-white font-bold py-2 px-4 rounded-lg btn">返回章节列表</button></div></aside><main id="content-area" class="flex-1 p-4 sm:p-6 md:p-10 overflow-y-auto"></main></div></div>
             </div>
-            <!-- [NEW] Admin View with Challenge Management -->
+            <!-- Admin View -->
             <div id="admin-management-view" class="view admin-view-bg text-gray-800 flex-grow">
                 <div class="flex-1 flex flex-col overflow-hidden">
                     <aside class="bg-gray-100 w-full md:w-60 flex-shrink-0 border-r border-gray-200">
@@ -195,49 +196,24 @@
                     </aside>
                     <main class="flex-1 overflow-x-hidden overflow-y-auto p-6">
                         <div id="admin-breadcrumb" class="mb-4 text-sm text-gray-500"></div>
-
-                        <!-- 篇章管理视图 -->
                         <div id="admin-category-list-view">
-                            <div class="flex justify-between items-center mb-4">
-                                <h2 class="text-2xl font-semibold text-gray-700">篇章管理</h2>
-                                <button id="admin-add-category-btn" class="btn btn-primary font-bold py-2 px-4 rounded-lg">＋ 新增篇章</button>
-                            </div>
+                            <div class="flex justify-between items-center mb-4"><h2 class="text-2xl font-semibold text-gray-700">篇章管理</h2><button id="admin-add-category-btn" class="btn btn-primary font-bold py-2 px-4 rounded-lg">＋ 新增篇章</button></div>
                             <div id="admin-categories-table-container" class="bg-white p-6 rounded-lg shadow-md"></div>
                         </div>
-
-                        <!-- 章节管理视图 -->
                         <div id="admin-chapter-list-view" class="hidden">
-                            <div class="flex justify-between items-center mb-4">
-                                <h2 id="admin-chapter-list-title" class="text-2xl font-semibold text-gray-700"></h2>
-                                <button id="admin-add-chapter-btn" class="btn btn-primary font-bold py-2 px-4 rounded-lg">＋ 新增章节</button>
-                            </div>
+                            <div class="flex justify-between items-center mb-4"><h2 id="admin-chapter-list-title" class="text-2xl font-semibold text-gray-700"></h2><button id="admin-add-chapter-btn" class="btn btn-primary font-bold py-2 px-4 rounded-lg">＋ 新增章节</button></div>
                             <div id="admin-chapters-table-container" class="bg-white p-6 rounded-lg shadow-md"></div>
                         </div>
-
-                        <!-- 小节管理视图 -->
                         <div id="admin-section-list-view" class="hidden">
-                            <div class="flex justify-between items-center mb-4">
-                                <h2 id="admin-section-list-title" class="text-2xl font-semibold text-gray-700"></h2>
-                                <button id="admin-add-section-btn" class="btn btn-primary font-bold py-2 px-4 rounded-lg">＋ 新增小节</button>
-                            </div>
+                            <div class="flex justify-between items-center mb-4"><h2 id="admin-section-list-title" class="text-2xl font-semibold text-gray-700"></h2><button id="admin-add-section-btn" class="btn btn-primary font-bold py-2 px-4 rounded-lg">＋ 新增小节</button></div>
                             <div id="admin-sections-table-container" class="bg-white p-6 rounded-lg shadow-md"></div>
                         </div>
-
-                        <!-- 内容块管理视图 -->
                         <div id="admin-block-editor-view" class="hidden">
-                            <div class="flex justify-between items-center mb-4">
-                                <h2 id="admin-editor-section-title" class="text-2xl font-semibold text-gray-700"></h2>
-                                <button id="admin-add-new-block-btn" class="btn btn-primary font-bold py-2 px-4 rounded-lg">＋ 新增内容块</button>
-                            </div>
+                            <div class="flex justify-between items-center mb-4"><h2 id="admin-editor-section-title" class="text-2xl font-semibold text-gray-700"></h2><button id="admin-add-new-block-btn" class="btn btn-primary font-bold py-2 px-4 rounded-lg">＋ 新增内容块</button></div>
                             <div id="admin-blocks-list" class="space-y-4 mb-6"></div>
                         </div>
-
-                        <!-- [NEW] 部门挑战管理视图 -->
                         <div id="admin-challenges-list-view" class="hidden">
-                            <div class="flex justify-between items-center mb-4">
-                                <h2 class="text-2xl font-semibold text-gray-700">部门挑战管理</h2>
-                                <button id="admin-add-challenge-btn" class="btn btn-primary font-bold py-2 px-4 rounded-lg">＋ 新增挑战</button>
-                            </div>
+                            <div class="flex justify-between items-center mb-4"><h2 class="text-2xl font-semibold text-gray-700">部门挑战管理</h2><button id="admin-add-challenge-btn" class="btn btn-primary font-bold py-2 px-4 rounded-lg">＋ 新增挑战</button></div>
                             <div id="admin-challenges-table-container" class="bg-white p-6 rounded-lg shadow-md"></div>
                         </div>
                     </main>
