--- a/index.html
+++ b/index.html
@@ -45,18 +45,16 @@
         
         <!-- ==================== [NEW] LANDING VIEW (Splash Screen) ==================== -->
         <section id="landing-view" class="view active">
-            <div id="opening-container">
-                <header class="fixed top-0 left-0 right-0 z-20 bg-transparent">
-                    <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-                        <div class="text-xl font-bold text-white font-calligraphy tracking-widest">流程天命</div>
-                        <button id="landing-login-btn" class="text-white font-semibold hover:text-amber-400 transition-colors">登录 / 注册</button>
-                    </div>
-                </header>
-                <div class="ken-burns-bg"></div>
-                <div id="narrative-overlay">
-                    <p id="subtitle"></p>
-                    <button id="start-journey-btn" class="btn bg-amber-600 hover:bg-amber-700 text-white font-bold py-3 px-8 rounded-lg mt-8 text-xl opacity-0 transition-opacity duration-1000">开启征途</button>
+            <div class="ken-burns-bg"></div>
+            <header class="fixed top-0 left-0 right-0 z-20 bg-transparent">
+                <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+                    <div class="text-xl font-bold text-white font-calligraphy tracking-widest">流程天命</div>
+                    <button id="landing-login-btn" class="text-white font-semibold hover:text-amber-400 transition-colors">登录 / 注册</button>
                 </div>
+            </header>
+            <div id="narrative-overlay">
+                <p id="subtitle"></p>
+                <button id="start-journey-btn" class="btn bg-amber-600 hover:bg-amber-700 text-white font-bold py-3 px-8 rounded-lg mt-8 text-xl">开启征途</button>
             </div>
         </section>
 
