--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <main id="app-container" class="relative">
         
-        <!-- ==================== [NEW] LANDING VIEW (Splash Screen) ==================== -->
+        <!-- ==================== [REFACTORED] LANDING & AUTH VIEW ==================== -->
         <section id="landing-view" class="view active">
             <div class="ken-burns-bg"></div>
             <header class="fixed top-0 left-0 right-0 z-20 bg-transparent">
@@ -52,9 +52,32 @@
                     <button id="landing-login-btn" class="text-white font-semibold hover:text-amber-400 transition-colors">登录 / 注册</button>
                 </div>
             </header>
-            <div id="narrative-overlay">
-                <p id="subtitle"></p>
-                <button id="start-journey-btn" class="btn bg-amber-600 hover:bg-amber-700 text-white font-bold py-3 px-8 rounded-lg mt-8 text-xl">开启征途</button>
+            
+            <!-- Narrative and Journey Button Container -->
+            <div id="narrative-container" class="w-full h-full flex items-center justify-center">
+                <div id="narrative-overlay">
+                    <button id="start-journey-btn" class="btn bg-amber-600 hover:bg-amber-700 text-white font-bold py-3 px-8 rounded-lg text-xl mb-8">开启征途</button>
+                    <p id="subtitle"></p>
+                </div>
+            </div>
+
+            <!-- Auth Form Container (hidden by default) -->
+            <div id="auth-container" class="w-full h-full hidden items-center justify-center p-4">
+                 <div class="w-full max-w-md">
+                    <div class="text-center mb-8"><button id="back-to-landing-btn" class="text-blue-400 hover:text-blue-300">&larr; 返回主页</button></div>
+                    <div class="module-container p-8 rounded-xl shadow-2xl">
+                        <h2 id="form-title" class="text-3xl font-bold text-center text-white mb-8">用户登录</h2>
+                        <form id="auth-form">
+                            <div class="space-y-6">
+                                <div id="full-name-input-container" class="hidden"><input type="text" id="full-name-input" placeholder="您的姓名" class="input-field w-full p-3 rounded-lg"></div>
+                                <input type="email" id="auth-input" placeholder="邮箱" class="input-field w-full p-3 rounded-lg" required>
+                                <input type="password" id="password-input" placeholder="密码" class="input-field w-full p-3 rounded-lg" required>
+                            </div>
+                            <button id="submit-btn" type="submit" class="w-full mt-8 py-3 rounded-lg btn btn-primary font-bold text-lg">登录</button>
+                        </form>
+                        <p class="text-center mt-6 text-sm"><span id="prompt-text">还没有账户？</span><a href="#" id="switch-mode-btn" class="font-semibold text-blue-400 hover:text-blue-300">立即注册</a></p>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -90,25 +113,6 @@
             <div id="lobby-modal-backdrop" class="fixed inset-0 bg-black bg-opacity-70 z-20 hidden items-center justify-center">
                 <div id="all-quests-modal" class="lobby-modal-content hidden"><h2 class="modal-title">所有任务</h2><div id="all-quests-content" class="modal-body"></div></div>
                 <div id="faction-challenges-modal" class="lobby-modal-content hidden"><h2 class="modal-title">阵营挑战</h2><div id="faction-challenges-content" class="modal-body"></div></div>
-            </div>
-        </section>
-
-        <!-- ==================== AUTH VIEW ==================== -->
-        <section id="auth-view" class="view flex-col items-center justify-center p-4">
-            <div class="w-full max-w-md">
-                <div class="text-center mb-8"><button id="back-to-landing-btn" class="text-blue-400 hover:text-blue-300">&larr; 返回主页</button></div>
-                <div class="module-container p-8 rounded-xl shadow-2xl">
-                    <h2 id="form-title" class="text-3xl font-bold text-center text-white mb-8">用户登录</h2>
-                    <form id="auth-form">
-                        <div class="space-y-6">
-                            <div id="full-name-input-container" class="hidden"><input type="text" id="full-name-input" placeholder="您的姓名" class="input-field w-full p-3 rounded-lg"></div>
-                            <input type="email" id="auth-input" placeholder="邮箱" class="input-field w-full p-3 rounded-lg" required>
-                            <input type="password" id="password-input" placeholder="密码" class="input-field w-full p-3 rounded-lg" required>
-                        </div>
-                        <button id="submit-btn" type="submit" class="w-full mt-8 py-3 rounded-lg btn btn-primary font-bold text-lg">登录</button>
-                    </form>
-                    <p class="text-center mt-6 text-sm"><span id="prompt-text">还没有账户？</span><a href="#" id="switch-mode-btn" class="font-semibold text-blue-400 hover:text-blue-300">立即注册</a></p>
-                </div>
             </div>
         </section>
 
