--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
                 </div>
             </nav>
             <div id="lobby-main-content">
-                <button id="plot-task-btn" class="lobby-main-button"><span id="plot-task-title">继续征途</span><span id="plot-task-subtitle">主线剧情</span></button>
-                <button id="faction-challenge-btn" class="lobby-side-button"><span>阵营挑战</span></button>
+                <!-- [REMOVED] Main buttons moved to bottom nav -->
                 <div id="leaderboard-panel-lobby" class="lobby-side-panel">
                     <div class="panel-tabs"><button class="tab-btn active" data-tab="personal">个人榜</button><button class="tab-btn" data-tab="faction">阵营榜</button></div>
                     <div id="leaderboard-content-personal" class="panel-content active"></div>
@@ -106,11 +105,27 @@
                 </div>
             </div>
             <nav id="lobby-bottom-nav">
-                <button class="lobby-nav-btn" data-action="show-all-quests"><svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" /></svg><span>任务</span></button>
+                <!-- [NEW] Main Quest Button -->
+                <button class="lobby-nav-btn" data-action="start-journey">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M13 5l7 7-7 7M5 5l7 7-7 7" />
+                    </svg>
+                    <span>主线任务</span>
+                </button>
+
+                <!-- [NEW] Faction Challenge Button -->
+                <button class="lobby-nav-btn" data-action="show-faction-challenges">
+                     <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+                    </svg>
+                    <span>阵营挑战</span>
+                </button>
+
                 <button class="lobby-nav-btn" data-action="show-profile"><svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" /></svg><span>个人主页</span></button>
                 <button class="lobby-nav-btn" data-action="show-admin"><svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0 3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.096 2.572-1.065z" /><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" /></svg><span>管理</span></button>
             </nav>
             <div id="lobby-modal-backdrop" class="fixed inset-0 bg-black bg-opacity-70 z-20 hidden items-center justify-center">
+                <!-- [REMOVED] all-quests-modal is no longer triggered, but kept for potential future use -->
                 <div id="all-quests-modal" class="lobby-modal-content hidden"><h2 class="modal-title">所有任务</h2><div id="all-quests-content" class="modal-body"></div></div>
                 <div id="faction-challenges-modal" class="lobby-modal-content hidden"><h2 class="modal-title">阵营挑战</h2><div id="faction-challenges-content" class="modal-body"></div></div>
             </div>
