--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             <div class="ken-burns-bg"></div>
             <header class="fixed top-0 left-0 right-0 z-20 bg-transparent">
                 <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-                    <div class="text-xl font-bold text-white font-calligraphy tracking-widest">流程天命</div>
+                    <!-- Top-left title is now more subtle -->
+                    <div class="text-lg font-bold text-white/70 font-calligraphy tracking-widest">流程天命</div>
                     <button id="landing-login-btn" class="text-white font-semibold hover:text-amber-400 transition-colors">登录 / 注册</button>
                 </div>
             </header>
@@ -56,6 +57,12 @@
             <!-- Narrative and Journey Button Container -->
             <div id="narrative-container" class="w-full h-full flex items-center justify-center">
                 <div id="narrative-overlay">
+                    <!-- [NEW] Main Game Title -->
+                    <div class="main-title mb-10 text-center">
+                        <h1 class="text-6xl md:text-8xl font-calligraphy">流程天命</h1>
+                        <p class="text-xl md:text-2xl text-gray-200 mt-2 tracking-widest opacity-90">英雄之旅</p>
+                    </div>
+
                     <button id="start-journey-btn" class="btn bg-amber-600 hover:bg-amber-700 text-white font-bold py-3 px-8 rounded-lg text-xl mb-8">开启征途</button>
                     <p id="subtitle"></p>
                 </div>
@@ -79,6 +86,11 @@
                     </div>
                 </div>
             </div>
+            
+            <!-- [NEW] Footer Signature -->
+            <footer class="absolute bottom-0 left-0 right-0 p-4 text-center text-gray-400 text-sm z-10">
+                <p>数字化管理中心</p>
+            </footer>
         </section>
 
         <!-- ==================== GAME LOBBY VIEW ==================== -->
@@ -97,7 +109,6 @@
                 </div>
             </nav>
             <div id="lobby-main-content">
-                <!-- [REMOVED] Main buttons moved to bottom nav -->
                 <div id="leaderboard-panel-lobby" class="lobby-side-panel">
                     <div class="panel-tabs"><button class="tab-btn active" data-tab="personal">个人榜</button><button class="tab-btn" data-tab="faction">阵营榜</button></div>
                     <div id="leaderboard-content-personal" class="panel-content active"></div>
@@ -105,27 +116,22 @@
                 </div>
             </div>
             <nav id="lobby-bottom-nav">
-                <!-- [NEW] Main Quest Button -->
                 <button class="lobby-nav-btn" data-action="start-journey">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M13 5l7 7-7 7M5 5l7 7-7 7" />
                     </svg>
                     <span>主线任务</span>
                 </button>
-
-                <!-- [NEW] Faction Challenge Button -->
                 <button class="lobby-nav-btn" data-action="show-faction-challenges">
                      <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
                     </svg>
                     <span>阵营挑战</span>
                 </button>
-
                 <button class="lobby-nav-btn" data-action="show-profile"><svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" /></svg><span>个人主页</span></button>
                 <button class="lobby-nav-btn" data-action="show-admin"><svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0 3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.096 2.572-1.065z" /><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" /></svg><span>管理</span></button>
             </nav>
             <div id="lobby-modal-backdrop" class="fixed inset-0 bg-black bg-opacity-70 z-20 hidden items-center justify-center">
-                <!-- [REMOVED] all-quests-modal is no longer triggered, but kept for potential future use -->
                 <div id="all-quests-modal" class="lobby-modal-content hidden"><h2 class="modal-title">所有任务</h2><div id="all-quests-content" class="modal-body"></div></div>
                 <div id="faction-challenges-modal" class="lobby-modal-content hidden"><h2 class="modal-title">阵营挑战</h2><div id="faction-challenges-content" class="modal-body"></div></div>
             </div>
