--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             
             <!-- [NEW] Footer Signature -->
             <footer class="absolute bottom-0 left-0 right-0 p-4 text-center text-gray-400 text-sm z-10">
-                <p>数字化管理中心</p>
+                <p>数字化管理中心 2025 </p>
             </footer>
         </section>
 
