--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <div id="narrative-container" class="w-full h-full flex items-center justify-center">
                 <div id="narrative-overlay">
                     <div class="main-title mb-10 text-center">
-                        <h1 class="text-6xl md:text-8xl font-calligraphy">流程天命</h1>
-                        <p class="text-xl md:text-2xl text-gray-200 mt-2 tracking-widest opacity-90">英雄之旅</p>
+                        <h1 class="text-6xl md:text-8xl font-calligraphy">流程天命人</h1>
+                        <p class="text-xl md:text-2xl text-gray-200 mt-2 tracking-widest opacity-90">淬炼之旅</p>
                     </div>
 
                     <button id="start-journey-btn" class="btn bg-amber-600 hover:bg-amber-700 text-white font-bold py-3 px-8 rounded-lg text-xl mb-8">开启征途</button>
