--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>流程天命 - 英雄之旅</title>
-    <!-- [MODIFIED] Replaced TailwindCSS CDN with a domestic one -->
+    <!-- [CORRECTED] Using the original TailwindCSS script for development compatibility -->
     <script src="https://cdn.tailwindcss.com"></script> 
-    <!-- [MODIFIED] Replaced Supabase CDN with a domestic one -->
-    <script src="https://cdn.staticfile.org/supabase-js/2.39.8/supabase.min.js"></script>
+    <!-- [CORRECTED] Replaced Supabase CDN with a correct and reliable domestic-friendly one -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <!-- [MODIFIED] Replaced Marked.js CDN with a domestic one -->
     <script src="https://cdn.staticfile.org/marked/12.0.2/marked.min.js"></script>
     <!-- [MODIFIED] Replaced Video.js CSS CDN with a domestic one -->
@@ -222,7 +222,7 @@
         // Supabase configuration remains unchanged as requested
         window.APP_CONFIG = {
             SUPABASE_URL: 'https://mfxlcdsrnzxjslrfaawz.supabase.co',
-            SUPABASE_KEY: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1meGxjZHNybnp4anNscmZhYXd6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE2ODQyODMsImV4cCI6MjA2NzI2MDI4M30.wTuqqQkOP2_ZwfUU_xM0-X9YjkM39-kewjN41Pxa_wA'
+            SUPABASE_KEY: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1meGxjZHNybnp4anNscmZhYXd6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE2ODQyODMsImV4cCI6MjA2NzI2MDI4M30.wTuqqQkOP2_ZwfUU_xM0-X9JjkM39-kewjN41Pxa_wA'
         };
     </script>
     <script type="module" src="js/app.js"></script>
